fixed spacing and added underscore filtering from labels

--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -94,7 +94,9 @@ body {
   }
 }
 
-
+.barchart {
+  margin: 0 30px;
+}
 //Filters
 
 .filter {
